Project mindrush {
  database_type: "PostgreSQL"
}

Table users {
  id uuid [pk]
  name text
  email text [not null]
  email_verified timestamp
  image text
}

Table accounts {
  user_id uuid [not null, ref: > users.id]
  type text [not null]
  provider text [not null]
  provider_account_id text [not null]
  refresh_token text
  access_token text
  expires_at int
  token_type text
  scope text
  id_token text
  session_state text

  primary key (provider, provider_account_id)
  index account_user_id_idx (user_id)
}

Table sessions {
  session_token text [pk]
  user_id uuid [not null, ref: > users.id]
  expires timestamp [not null]

  index session_user_id_idx (user_id)
}

Table verification_tokens {
  identifier text [not null]
  token text [not null]
  expires timestamp [not null]

  primary key (identifier, token)
}

Table quizzes {
  id uuid [pk]
  educator_id uuid [not null, ref: > users.id]
  title text [not null]
  description text [not null]
  type text [not null]
  created_at timestamp [not null]
}

Table questions {
  id uuid [pk]
  quiz_id uuid [not null, ref: > quizzes.id]
  type text [not null]
  image text
  question text [not null]
  time_limit int [not null]
  order int [not null]
  created_at timestamp [not null]

  unique index (order, quiz_id)
}

Table quiz_question_alternatives {
  id uuid [pk]
  question_id uuid [not null, ref: > questions.id]
  answer text [not null]
  correct boolean [not null]
  created_at timestamp [not null]

  unique index (question_id, correct) [note: "Only one correct alternative per question"]
}

Table matches {
  id uuid [pk]
  quiz_id uuid [not null, ref: > quizzes.id]
  pin text [not null]
  state text [not null]
  current_question_id uuid [ref: > questions.id]
  created_at timestamp [not null]
}

Table participants {
  id uuid [pk]
  nickname text [not null]
  total_points int [not null]
  match_id uuid [not null, ref: > matches.id]

  unique index (nickname, match_id)
}

Table quiz_answers {
  id uuid [pk]
  participant_id uuid [not null, ref: > participants.id]
  question_id uuid [not null, ref: > questions.id]
  match_id uuid [not null, ref: > matches.id]
  alternative_id uuid [not null, ref: > quiz_question_alternatives.id]
  correct boolean [not null]
  points int [not null]
  time int [not null]
  created_at timestamp [not null]

  unique index (participant_id, question_id, match_id)
}
